{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 311,
  "lineage": "32cff079-a382-60e2-80fd-15b8be2739f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01b0104ac5427bf4e",
            "domain": "vpc",
            "id": "eipalloc-0514fe85db21a947e",
            "network_interface": "eni-0cf2fb4e3c74eaf73",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-54-236-73-11.compute-1.amazonaws.com",
            "public_ip": "54.236.73.11",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:821777302053:instance/i-09889635af52ef8cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdh",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06393ecb46dcd75de",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-tf-test-bucket-role",
            "id": "i-09889635af52ef8cc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_learning_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be97a62bcb3acfa9",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-34-201-48-66.compute-1.amazonaws.com",
            "public_ip": "34.201.48.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cc03c2204070963d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0faddc8ab9d1972ab",
            "tags": {
              "Name": "Terraform learning"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Extra Volume Data"
            },
            "vpc_security_group_ids": [
              "sg-0016ff1e957e51da9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3-tf-test-bucket-role-instanceprofile",
            "aws_iam_role.s3-tf-test-bucket-role",
            "aws_key_pair.terraform_learning_key_pair",
            "aws_security_group.terraform_learn_elb_security_group",
            "aws_security_group.terraform_learn_security_group",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cf624b9badae9a76",
            "owner_id": "821777302053",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-test-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:loadbalancer/app/tf-test-elb/c07f5b8cd64662bd",
            "arn_suffix": "app/tf-test-elb/c07f5b8cd64662bd",
            "dns_name": "tf-test-elb-1921806329.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:821777302053:loadbalancer/app/tf-test-elb/c07f5b8cd64662bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-test-elb",
            "security_groups": [
              "sg-0084f3c174686fc52"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f131ba9ad534287a"
              },
              {
                "subnet_id": "subnet-0faddc8ab9d1972ab"
              }
            ],
            "subnets": [
              "subnet-0f131ba9ad534287a",
              "subnet-0faddc8ab9d1972ab"
            ],
            "tags": {
              "Name": "tf-test-elb"
            },
            "vpc_id": "vpc-06f5aa172799aaf14",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform_learn_elb_security_group",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:listener/app/tf-test-elb/c07f5b8cd64662bd/7d94ea9801c77760",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:targetgroup/tf-example-lb-tg/7d6b0a892bd47e41",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821777302053:listener/app/tf-test-elb/c07f5b8cd64662bd/7d94ea9801c77760",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:loadbalancer/app/tf-test-elb/c07f5b8cd64662bd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.tf-test-elb",
            "aws_lb_target_group.test",
            "aws_security_group.terraform_learn_elb_security_group",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:targetgroup/tf-example-lb-tg/7d6b0a892bd47e41",
            "arn_suffix": "targetgroup/tf-example-lb-tg/7d6b0a892bd47e41",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821777302053:targetgroup/tf-example-lb-tg/7d6b0a892bd47e41",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:821777302053:targetgroup/tf-example-lb-tg/7d6b0a892bd47e41-20200331020513562400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821777302053:targetgroup/tf-example-lb-tg/7d6b0a892bd47e41",
            "target_id": "i-09889635af52ef8cc"
          },
          "dependencies": [
            "aws_instance.example",
            "aws_lb_target_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0514fe85db21a947e",
            "id": "nat-0e74a27b6cde5e701",
            "network_interface_id": "eni-0cf2fb4e3c74eaf73",
            "private_ip": "10.0.1.48",
            "public_ip": "54.236.73.11",
            "subnet_id": "subnet-0faddc8ab9d1972ab"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf1407e986ba2f94",
            "owner_id": "821777302053",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e74a27b6cde5e701",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09d02f1af8922bf91",
            "owner_id": "821777302053",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf624b9badae9a76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fa60186f93e7c3f",
            "route_table_id": "rtb-0bf1407e986ba2f94",
            "subnet_id": "subnet-00047863473d95dc3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb6e12dea7c37402",
            "route_table_id": "rtb-0bf1407e986ba2f94",
            "subnet_id": "subnet-09de3b7d1e08796f7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3beb75e4fc85d14",
            "route_table_id": "rtb-0bf1407e986ba2f94",
            "subnet_id": "subnet-038f5fef98e43c80b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-3",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e873b6c787f73d62",
            "route_table_id": "rtb-09d02f1af8922bf91",
            "subnet_id": "subnet-0faddc8ab9d1972ab"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a4a3df7aeab3dac",
            "route_table_id": "rtb-09d02f1af8922bf91",
            "subnet_id": "subnet-0f131ba9ad534287a"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec9163a41c99e3b",
            "route_table_id": "rtb-09d02f1af8922bf91",
            "subnet_id": "subnet-0cfd3342f16b49571"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_learn_elb_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:security-group/sg-0084f3c174686fc52",
            "description": "Security group for HTTP traffic from personal PC to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0084f3c174686fc52",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.25.51.109/32"
                ],
                "description": "HTTP Traffic from my PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_learn_elb_sec_group",
            "name_prefix": null,
            "owner_id": "821777302053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Port 80 from Personal PC"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_learn_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:security-group/sg-0016ff1e957e51da9",
            "description": "Security group to allow traffic from personal PC and for ELB to access instances over port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0016ff1e957e51da9",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.25.51.109/32"
                ],
                "description": "Port 80 for ELB HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0084f3c174686fc52"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "70.25.51.109/32"
                ],
                "description": "SSH from personal PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Port 8080 for ELB health checks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0084f3c174686fc52"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform_learn_sec_group",
            "name_prefix": null,
            "owner_id": "821777302053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH and ELB Port 80"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_security_group.terraform_learn_elb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-00047863473d95dc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00047863473d95dc3",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-09de3b7d1e08796f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09de3b7d1e08796f7",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-038f5fef98e43c80b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-038f5fef98e43c80b",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-0faddc8ab9d1972ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0faddc8ab9d1972ab",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-0f131ba9ad534287a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f131ba9ad534287a",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:subnet/subnet-0cfd3342f16b49571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0cfd3342f16b49571",
            "map_public_ip_on_launch": true,
            "owner_id": "821777302053",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-06f5aa172799aaf14"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821777302053:vpc/vpc-06f5aa172799aaf14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0400fc6b24d988b14",
            "default_route_table_id": "rtb-081d64c5a6d83c1c4",
            "default_security_group_id": "sg-00f363e9299b87f21",
            "dhcp_options_id": "dopt-50e5af2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06f5aa172799aaf14",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081d64c5a6d83c1c4",
            "owner_id": "821777302053",
            "tags": {
              "Name": "LearningVPC"
            }
          }
        }
      ]
    }
  ]
}